<resources>
    <string name="app_name">Inventory app</string>
    <string name="action_settings">Settings</string>
    <string name="insert_data">Insert dummy data</string>


    <string name="empty_view_title_text">No products saved jet</string>
    <string name="empty_view_subtitle_text">Simply add product with add product button</string>

    <string name="title_new_product">Add new product</string>
    <string name="title_edit_product">Edit product</string>

    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>

    <string name="dialog_select_image">Select Image</string>

    <string name="action_cancel">Cancel</string>
    <string name="action_discard">Discard</string>
    <string name="action_keep_editing">Keep editing</string>

    <string name="price">Price:</string>
    <string name="sell">SELL</string>

    <string name="product_info">Product info:</string>
    <string name="seller_info">Seller info:</string>

    <string name="product_name">Name: </string>
    <string name="hint_product_name">Name</string>

    <string name="product_price">Price: </string>
    <string name="hint_product_price">23.4</string>

    <string name="product_quantity">Quantity: </string>
    <string name="hint_product_quantity">1</string>

    <string name="product_picture">Picture: </string>
    <string name="hint_product_picture">Picture</string>


    <string name="seller_title">Name: </string>
    <string name="hint_seller_title">udacity</string>

    <string name="seller_phone">Phone: </string>
    <string name="hint_seller_phone">04420 203 044</string>

    <string name="seller_email">E-mail: </string>
    <string name="hint_seller_email">info@udacity.com</string>

    <string name="delete_dialog">Do you want to delete item?</string>
    <string name="unsaved_changes_dialog">You have some unsaved changes made</string>

    <string name="delete_item_failed">Error while deleting item!</string>
    <string name="delete_item_successful">Item was deleted!</string>

    <string name="insert_item_failed">Error while inserting item!</string>
    <string name="insert_item_successful">Item was inserted!</string>

    <string name="update_item_failed">Error while updateing item!</string>
    <string name="update_item_successful">Item was updated!</string>

    <string name="btn_add_image">Add image</string>

    <string name="subject_item_sold_out">Item has sold out</string>
    <string name="msg_item_sold_out">Pleas send me more items. I have sold out all my products.</string>

    <string name="call_supplier">Call</string>
    <string name="email_supplier">Send email</string>


    <string name="input_validation_empty">Pleas enter data into filds they are empty.</string>


</resources>
