<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="si.gcarrot.myapplication.DetailActivity"
    android:orientation="vertical">

    <TextView
        android:text="@string/product_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textStyle="normal|bold"
        android:textSize="18sp"
        android:textColor="@color/colorPrimary" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin">


        <TextView
            android:text="@string/product_name"
            android:layout_width="@dimen/width_details_category"
            android:layout_height="wrap_content"
            android:id="@+id/text_item_name"
            android:textStyle="normal|bold" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/editText_item_name"
            android:layout_weight="1"
            android:hint="@string/hint_product_name" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin">


        <TextView
            android:text="@string/product_price"
            android:layout_width="@dimen/width_details_category"
            android:layout_height="wrap_content"
            android:id="@+id/text_item_price"
            android:textStyle="normal|bold" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/editText_item_price"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            android:hint="@string/hint_product_price" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:layout_gravity="start">

        <TextView
            android:text="@string/product_quantity"
            android:layout_width="@dimen/width_details_category"
            android:layout_height="wrap_content"
            android:id="@+id/text_item_quantity"
            android:textStyle="normal|bold"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">



            <Button
                android:text="-"
                android:layout_width="@dimen/btn_plus_minus_width"
                android:layout_height="wrap_content"
                android:id="@+id/btn_minus" />

            <EditText
                android:layout_width="@dimen/max_width_quantity"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/editText_item_quantity"
                android:hint="@string/hint_product_quantity"
                android:textAlignment="center"
                android:text="0" />

            <Button
                android:text="+"
                android:layout_width="@dimen/btn_plus_minus_width"
                android:layout_height="wrap_content"
                android:id="@+id/btn_plus" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin">


        <TextView
            android:text="@string/product_picture"
            android:layout_width="@dimen/width_details_category"
            android:layout_height="wrap_content"
            android:id="@+id/text_item_img"
            android:textStyle="normal|bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_launcher2"
            android:id="@+id/image_item"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:maxHeight="@dimen/max_width_empty_image"
            android:maxWidth="@dimen/max_width_empty_image" />

        <Button
            android:text="@string/btn_add_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnAddImg"
            android:layout_weight="1"
            android:fontFamily="sans-serif-medium" />
    </LinearLayout>

    <TextView
        android:text="@string/seller_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:textStyle="normal|bold"
        android:textSize="18sp"
        android:textColor="@color/colorPrimary"  />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin">


        <TextView
            android:text="@string/seller_title"
            android:layout_width="@dimen/width_details_category"
            android:layout_height="wrap_content"
            android:id="@+id/text_seller_name"
            android:textStyle="normal|bold" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/editText_seller_name"
            android:layout_weight="1"
            android:inputType="text"
            android:hint="@string/hint_seller_title" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin">


        <TextView
            android:text="@string/seller_phone"
            android:layout_width="@dimen/width_details_category"
            android:layout_height="wrap_content"
            android:id="@+id/text_seller_phone"
            android:textStyle="normal|bold" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/editText_seller_phone"
            android:layout_weight="1"
            android:inputType="text"
            android:hint="@string/hint_seller_phone" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin">


        <TextView
            android:text="@string/seller_title"
            android:layout_width="@dimen/width_details_category"
            android:layout_height="wrap_content"
            android:id="@+id/text_seller_email"
            android:textStyle="normal|bold" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/editText_seller_email"
            android:layout_weight="1"
            android:inputType="text"
            android:hint="@string/hint_seller_email" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin">


        <Button
            android:text="@string/call_supplier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_call_suplier"
            android:layout_weight="1" />

        <Button
            android:text="@string/email_supplier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_send_email"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>
